# transactions-extractor

./: pyproject.toml
application/: main.py
src/util_funcs/: pre_process.py
