[tool.poetry]
name = "agulu-ventures-transactions"
version = "0.1.0"
description = "Extracts transactions details from pdf file, process them, and computes aggregation"
authors = ["midega-g <midegageorge2@gmail.com>"]
readme = "README.md"
packages = [{include = "util_funcs", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10.3"
pdfplumber = "0.11.5"
pandas = "2.1.4"
streamlit = "1.41.1"
openpyxl = "3.1.5"
XlsxWriter = "3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
